--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -129,6 +129,7 @@
                 color: black
                 background: white
                 cursor: pointer
+                white-space: nowrap
 
     .exit
         display: flex
