--- a/src/pages/ApplicationPage/ApplicationPage.module.sass
+++ b/src/pages/ApplicationPage/ApplicationPage.module.sass
@@ -179,10 +179,12 @@
             .small
                 width: 245px
                 height: 252px
+                position: relative
 
             .large
                 width: 334px
                 height: 252px
+                position: relative
 
             img, .previewImage
                 width: 100%
@@ -193,6 +195,28 @@
                 &:hover
                     transition: .3s
                     filter: brightness(50%)
+                            
+
+            .small:hover .closeBtn,
+            .large:hover .closeBtn
+                display: block
+
+
+                    
+            .closeBtn
+                display: none
+                position: absolute
+                width: 30px
+                height: 30px
+                cursor: pointer
+                right: 5px
+                top: 5px
+
+                &:hover
+                    display: block
+                
+                // margin-left: -30px
+
             
 
 
@@ -400,8 +424,121 @@
                         font-weight: 400
                         font-size: 14px
                     
+
+        .addDocument
+            width: 100%
+
+            .inputBlock
+                margin-top: 40px
+                cursor: pointer
+                display: flex
+                flex-direction: column
+
+                justify-content: center
+                align-items: center
+
+                width: 100%
+                height: 160px
+                border: 1.50px dashed rgba(2, 2, 4, 0.1)
+                background: #f9f8f7
+                gap: 8px
+
+                p
+                    font-family: "Montserrat", sans-serif
+                    font-weight: 500
+                    font-size: 18px
+                    line-height: 180%
+                    text-align: center
+                    color: #020204
+
+                    &:nth-child(2)
+                        color: #b0b0b0
+
+            .fileList li
+                list-style-type: none
+                display: flex
+                flex-direction: row
+
+                justify-content: flex-start
+                align-items: center
+                gap: 15px
+                margin-top: 10px
+
+                .size 
+                    color: #B0B0B0
+
+                .closeBtn 
+                    cursor: pointer
+                
     .questions
         width: 100%
         display: grid
         place-items: center
         background: #f0efec
+
+    .balancePopup
+        position: fixed
+        top: 20vh
+        z-index: 10
+        .shadow 
+            position: fixed
+            top: 0
+            left: 0
+            width: 100vw
+            height: 100vh
+            background-color: rgba(0, 0, 0, 0.5) // Полупрозрачный черный фон
+            z-index: -1
+
+    .addProject
+        width: 250px
+        height: 45px
+        
+        border: 1px solid black
+        background: none
+
+        
+        text-transform: uppercase
+        font-size: 19px
+        
+        cursor: pointer
+        margin-top: 100px
+        font-family: "Montserrat", sans-serif
+        font-weight: 800
+
+    .additionalFields
+        width: 100%
+        .block
+            display: flex
+            align-items: center
+            justify-content: flex-start
+            flex-direction: row
+            gap: 24px
+
+                
+
+            p
+                font-family: "Montserrat", sans-serif
+                font-weight: 500
+                font-size: 18px
+                line-height: 180%
+                color: #020204
+                margin: 0
+                width: 300px
+
+                span
+                    color: #ca252a
+
+            input, textarea, select
+                width: 384px
+                height: 56px
+                padding-left: 16px
+                border: 1px solid rgba(2, 2, 4, 0.1)
+                font-size: 18px
+
+                font-family: "Montserrat", sans-serif
+                font-weight: 500
+                font-size: 18px
+                margin-top: 20px
+
+                &:focus
+                    outline: none
