--- a/src/pages/CabinetPage/CabinetPage.module.sass
+++ b/src/pages/CabinetPage/CabinetPage.module.sass
@@ -169,6 +169,55 @@
             .saveBtn
                 margin-bottom: 40px
 
+        .applications
+            display: flex
+            flex-direction: row
+
+            justify-content: flex-start
+            align-items: center
+
+            width: 100%
+            gap: 20px
+            flex-wrap: wrap
+
+            .application
+                width: 30%
+                padding: 15px
+
+                
+                border-radius: 10px
+                height: 200px
+                border: 1px solid #1111115f 
+
+                display: flex
+                flex-direction: column
+
+                justify-content: space-around
+                align-items: flex-start
+
+                .nom
+                    font-family: steelfish
+                    font-size: 40px
+
+                    font-weight: bolder
+                
+                .spec
+                    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+                    font-size: 17px
+
+                button
+                    width: 150px
+                    height: 40px
+
+                    background: black
+                    color: white
+                    font-weight: bolder
+
+                    cursor: pointer
+                    text-transform: uppercase
+                    border: none
+
+
     .jouryBtn
         border: 2px solid #111
         
@@ -185,6 +234,7 @@
         cursor: pointer
         margin-bottom: 89px
         
+
 
 
                 
