--- a/src/pages/CabinetPage/CabinetPage.module.sass
+++ b/src/pages/CabinetPage/CabinetPage.module.sass
@@ -62,7 +62,7 @@
             color: #020204
             width: 100%
 
-        .saveBtn
+        .saveBtn, .exitBtn
             width: 147px
             height: 56px
 
@@ -77,6 +77,10 @@
             
             color: #f0efec
 
+        .exitBtn
+            background: none
+            border: 1px solid black
+            color: black
 
         .boldText
             font-family: "Steelfish", sans-serif
