--- a/src/components/AdminNominations/AdminNominations.module.sass
+++ b/src/components/AdminNominations/AdminNominations.module.sass
@@ -92,11 +92,11 @@
     border-radius: 15px
     max-width: 500px
     width: 100%
-    // height: 400px
+    height: 600px
     position: relative
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3)
     z-index: 1000
-
+    overflow-y: scroll
     h3
         font-family: steelfish
         font-size: 30px
@@ -148,6 +148,27 @@
             border: none
             border-radius: 3px
             margin-top: 20px
+
+        .addText
+            display: flex
+            flex-direction: column
+
+
+            justify-content: center
+            align-items: center
+            gap: 10px
+            margin-top: 15px
+
+            textarea
+                width: 300px
+                border: 1px solid gray
+                border-radius: 5px
+                height: 250px
+                padding: 10px
+                font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
+                &:focus
+                    outline: none
 
         .infoItem
             display: flex
