--- a/src/pages/ApplicationPage/ApplicationPage.module.sass
+++ b/src/pages/ApplicationPage/ApplicationPage.module.sass
@@ -462,6 +462,7 @@
                 justify-content: flex-start
                 align-items: center
                 gap: 15px
+                cursor: pointer
                 margin-top: 10px
 
                 .size 
