--- a/src/pages/ApplicationPage/ApplicationPage.module.sass
+++ b/src/pages/ApplicationPage/ApplicationPage.module.sass
@@ -409,6 +409,7 @@
                 flex-direction: column
                 cursor: pointer
                 margin-bottom: 40px
+                border: none
 
 
 
