--- a/src/components/AddJoury/AddJoury.module.sass
+++ b/src/components/AddJoury/AddJoury.module.sass
@@ -49,3 +49,60 @@
         border: 2px solid black
         color: black
         
+    .blocks
+        display: flex
+        flex-direction: column
+
+        justify-content: flex-start
+        align-items: center
+
+        margin-top: 60px
+
+        width: 50%
+        border-bottom: 1px solid #11111134
+        padding-bottom: 15px
+
+        .block
+            display: flex
+            flex-direction: column
+
+            justify-content: flex-start
+            align-items: center
+
+            gap: 25px
+            width: 100%
+
+            .top
+                display: flex
+                flex-direction: row
+                justify-content: space-between
+                align-items: center
+                gap: 200px
+
+
+                p
+                    text-decoration: underline
+                    cursor: pointer
+            
+            .bottom
+                display: flex
+                flex-direction: column
+
+                justify-content: flex-start
+                align-items: flex-start
+
+
+                .nominations
+                    display: flex
+                    flex-direction: row
+
+                    justify-content: center
+                    align-items: center
+
+                    
+                    gap: 20px
+                    height: 50px
+
+                    input
+                        width: 20px
+                        margin: 0
