--- a/src/pages/CabinetPage/CabinetPage.module.sass
+++ b/src/pages/CabinetPage/CabinetPage.module.sass
@@ -134,7 +134,7 @@
                     span
                         color: #ca252a
 
-                input, textarea
+                input, textarea, select
                     width: 384px
                     height: 56px
                     padding-left: 16px
@@ -155,6 +155,8 @@
                     object-fit: cover
                     cursor: pointer
                 
+                select
+                    width: 405px
                 textarea
                     height: 248px
                     resize: none
@@ -163,6 +165,99 @@
                 .saveBlock
                     display: grid
                     place-items: center
+
+
+                .photosBlock, .videosBlock
+                    width: 100%
+                    padding-bottom: 10px
+                    
+
+                    .boldText
+                        font-family: "Steelfish", sans-serif
+                        font-weight: 700
+                        font-size: 32px
+                        text-transform: uppercase
+                        color: #020204
+                        margin-top: 40px
+
+                        padding-bottom: 24px
+                        border-bottom: 1.50px solid rgba(2, 2, 4, 0.1)
+                        width: 100%
+
+                    .inputBlock
+                        margin-top: 40px
+                        cursor: pointer
+                        display: flex
+                        flex-direction: column
+
+                        justify-content: center
+                        align-items: center
+
+                        width: 100%
+                        height: 160px
+                        border: 1.50px dashed rgba(2, 2, 4, 0.1)
+                        background: #f9f8f7
+                        gap: 8px
+
+                        p
+                            font-family: "Montserrat", sans-serif
+                            font-weight: 500
+                            font-size: 18px
+                            line-height: 180%
+                            text-align: center
+                            color: #020204
+
+                            &:nth-child(2)
+                                color: #b0b0b0
+                                
+                .previewBlock
+                    width: 100%
+                    display: flex
+                    flex-direction: row
+                    flex-wrap: wrap
+                    gap: 24px
+                    // height: auto
+
+                    .small
+                        width: 245px
+                        height: 252px
+                        position: relative
+
+                    .large
+                        width: 334px
+                        height: 252px
+                        position: relative
+
+                    img, .previewImage
+                        width: 100%
+                        height: 100%
+                        object-fit: cover
+                        transition: .3s
+
+                        &:hover
+                            transition: .3s
+                            filter: brightness(50%)
+                                    
+
+                    .small:hover .closeBtn,
+                    .large:hover .closeBtn
+                        display: block
+
+
+                            
+                    .closeBtn
+                        display: none
+                        position: absolute
+                        width: 30px
+                        height: 30px
+                        cursor: pointer
+                        right: 5px
+                        top: 5px
+
+                        &:hover
+                            display: block
+                        
+                        // margin-left: -30px
 
 
         .socialMedias
