--- a/src/components/Questions/Questions.module.sass
+++ b/src/components/Questions/Questions.module.sass
@@ -1,6 +1,6 @@
 .container
     width: 90%
-    height: 1232px
+    height: 1332px
 
     background: #F0EFEC
 
@@ -8,7 +8,7 @@
     flex-direction: column
 
     justify-content: flex-start
-    align-items: center
+    align-items: flex-start
 
     .innerContainer
         display: flex
