--- a/src/pages/CabinetPage/CabinetPage.module.sass
+++ b/src/pages/CabinetPage/CabinetPage.module.sass
@@ -213,10 +213,20 @@
                 .previewBlock
                     width: 100%
                     display: flex
-                    flex-direction: row
+                    flex-direction: column
                     flex-wrap: wrap
                     gap: 24px
                     // height: auto
+
+                    .oldFiles, .newFiles
+                        display: flex
+                        flex-direction: row
+
+                        justify-content: flex-start
+                        align-items: flex-start
+                        flex-wrap: wrap
+                        width: 100%
+                        gap: 24px
 
                     .small
                         width: 245px
@@ -278,6 +288,7 @@
             width: 100%
             gap: 20px
             flex-wrap: wrap
+            padding-bottom: 20px
 
             .application
                 width: 30%
