--- a/src/pages/OpenedJoury/OpenedJoury.module.sass
+++ b/src/pages/OpenedJoury/OpenedJoury.module.sass
@@ -132,3 +132,108 @@
                 font-size: 120px
                 text-transform: uppercase
                 color: #000
+
+            .projects
+                display: flex
+                flex-direction: row
+
+                flex-wrap: wrap
+                justify-content: flex-start
+                align-items: flex-start
+                margin-top: 20px
+
+                gap: 2%
+
+                width: 100%
+                padding-bottom: 20px
+
+                .projectImageWrapper img, img
+                    width: 45%
+                    margin-top: 20px
+                    height: 320px
+                    object-fit: cover
+
+                
+            .overlay 
+                position: absolute
+                top: 0
+                left: 0
+                margin-top: 20px
+
+                width: 100%
+                
+                display: flex
+                justify-content: center
+                align-items: center
+                background-color: rgba(0, 0, 0, 0.784) // Dark overlay
+                color: white
+                font-size: 16px
+                height: 320px
+                
+                cursor: pointer
+
+            .projectImageWrapper 
+                position: relative
+                margin: 5px
+                width: 45%
+                // cursor: pointer
+
+                img 
+                    margin-top: 20px
+                    width: 100% !important
+                    
+                        
+                
+
+                &.lastImage 
+                    filter: brightness(0.7)
+
+@media screen and ( max-width:  700px)
+    .container
+        .innerContainer
+            .top
+                flex-direction: column
+                display: none
+
+            .mainSide
+                flex-direction: column
+                .left
+                    width: 90%
+
+                    justify-content: flex-start
+                    .title
+                        font-size: 60px
+                    .nomination
+                        width: 100%
+
+                    .about
+                        margin-top: 20px
+                        padding-bottom: 20px
+                .right
+                    width: 90%
+
+            .projectsSide
+                margin-top: 40px
+                width: 90%
+                .title
+                    font-size: 60px
+
+
+                .projects
+                    flex-direction: column
+                    justify-content: center
+                    align-items: center
+                    margin-top: 0
+                .projectImageWrapper img, img
+                    width: 100% !important
+                    
+                .projectImageWrapper 
+                    position: relative
+                    margin: 5px
+                    width: 100% !important
+                    // cursor: pointer
+
+                    img 
+                        margin-top: 20px
+                        width: 100% !important
+                        
