--- a/src/pages/AboutPage/AboutPage.module.sass
+++ b/src/pages/AboutPage/AboutPage.module.sass
@@ -269,21 +269,28 @@
             flex-direction: row
 
             justify-content: flex-start
-            align-items: flex-start
+            align-items: stretch
 
             flex-wrap: wrap
-            // width: 1202px
+            width: 100%
             margin-top: 20px
-            gap: 20px
+            gap: 40px
             padding-bottom: 130px
+            
 
 
             .block
+            
                 border: 1.50px solid #020204
                 padding: 32px
-                width: 444px
-                height: 378px
-
+                
+                width: 35% !important
+                // flex: 1
+                // height: 505px
+                display: flex
+                flex-direction: column // Это важно, чтобы содержимое не нарушало структуру
+                flex-grow: 1
+                
                 .title
                     font-family: "Steelfish", sans-serif
                     font-weight: 800
@@ -292,7 +299,7 @@
                     color: #020204
 
                 .list
-                    width: 442px
+                    width: 100%
 
                     display: flex
                     flex-direction: column
@@ -309,6 +316,7 @@
                         font-size: 18px
                         line-height: 180%
                         color: #020204
+                        width: 100%
 
                 button
                     border: 1.50px solid #ca252a
@@ -320,6 +328,145 @@
                     background: white
                     cursor: pointer
                     margin-top: 32px
+
+    .shadow
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background-color: rgba(0, 0, 0, 0.574)
+        z-index: 0
+        
+
+    .popup
+        display: flex
+        z-index: 1
+        flex-direction: column
+
+        justify-content: flex-start
+        align-items: center
+
+        position: fixed
+        top: 10px
+
+
+        width: 1012px
+        height: 684px
+
+        background: white
+
+        padding: 50px
+        left: 350px
+        overflow: scroll !important
+
+        .topMobileSide
+            display: none
+
+        .topSide
+            display: flex
+            flex-direction: row
+
+            width: 100%
+
+            justify-content: space-between
+            align-items: center
+
+            .title
+                font-size: 47px
+
+
+            .right
+                display: flex
+                flex-direction: row
+
+                justify-content: center
+                align-items: center
+
+                button
+                    width: 217px
+                    height: 70px
+                    background: #ca252a !important
+                    font-family: "Montserrat", sans-serif
+                    font-weight: 800
+                    font-size: 18px
+                    color: #fff
+                    border: none
+
+                    cursor: pointer
+                    margin: 0
+                    margin-right: 50px
+                img
+                    cursor: pointer
+        .mainSide
+            display: flex
+            flex-direction: column
+
+            justify-content: center
+            align-items: center
+
+            width: 100%
+
+            .title
+                text-transform: uppercase
+                color: #ca252a
+                font-size: 35px
+                width: 100%
+                text-align: left
+                padding-bottom: 24px
+                border-bottom: 1.50px solid rgba(2, 2, 4, 0.1)
+                margin-top: 50px
+
+            .information
+                font-family: "Montserrat", sans-serif
+                font-weight: 500
+                font-size: 18px
+                line-height: 180%
+                color: #020204
+                width: 100%
+
+                .par
+                    font-family: "Montserrat", sans-serif
+                    font-weight: 400
+                    font-size: 18px
+                    line-height: 180%
+                    color: #020204
+                    width: 100%
+
+            .should
+                display: flex
+                flex-direction: row
+
+                justify-content: space-between
+                align-items: center
+
+                margin-top: 40px
+                gap: 32px
+                width: 100%
+
+                .block
+                    padding: 0
+                    display: flex
+                    flex-direction: column
+
+                    justify-content: flex-start
+                    align-items: flex-start
+
+                    gap: 16px
+                    border: none
+                    
+
+                    .bold, .par
+                        font-family: "Montserrat", sans-serif
+                        font-weight: 700
+                        font-size: 18px
+                        color: #020204
+                        width: 100%
+
+                    .par
+                        font-weight: 500
+                        margin-top: 0
+                    
 
     .joury
         background: white
@@ -635,10 +782,12 @@
 
                 .block
                     width: 90%
-                    padding: 0
+                    padding: 20px
+                    height: auto
 
                     .title
-                        margin: 15px 0 0 15px
+                        margin: 0px 0 0 15px
+                        text-align: left
 
                     .list
                         width: 100%
@@ -647,8 +796,30 @@
                     button
                         margin: 25px 0 0 15px
                         color: black
-                        border: 1px solid black
+                        border: 1px solid #CA252A
+        .popup 
+            width: 90%
+            left: 50%
+            top: 51%
+            transform: translate(-50%, -50%)  // Центрируем по горизонтали и вертикали
+            padding: 20px
+            position: fixed  // Убедитесь, что позиционирование остаётся fixed для модальных окон
+            z-index: 100
+            
 
+            .topSide, .topMobileSide
+                // margin-top: 120px
+                .right
+                    justify-content: center
+                    align-items: center
+                    gap: 20px
+
+                    button
+                        color: #fff
+                        border: none
+                        margin: 0
+                        height: 40px
+                        font-size: 16px 
         .jouryParent
             width: 100%
 
@@ -709,3 +880,87 @@
                 display: flex
                 overflow-x: scroll
                 width: 90%
+
+@media screen and ( max-width:  700px)
+    .container
+        
+        .criterion
+            .blocks
+                width: 90%
+                .block
+                    width: 90% !important
+
+                    .title, .list, button
+                        margin-left: 0
+                    
+                        
+                    
+                
+    
+        .popup
+            width: 85%
+            justify-content: flex-start
+            align-items: center
+            height: 500px
+            overflow-y: scroll
+            overflow-x: hidden
+            
+            border-radius: 10px
+            padding: 10px
+            padding-bottom: 50px
+            
+            .topSide
+                display: none
+
+            .topMobileSide
+                display: flex
+                flex-direction: column
+                width: 100%
+                // height: 200px
+                
+                
+                // position: fixed
+                margin-top: 0px
+                // background: red
+                
+                
+                
+
+                .top
+                    display: flex
+                    flex-direction: row
+                    justify-content: space-between
+                    align-items: center
+                    // position: relative
+                    
+
+                    
+
+                    img
+                        width: 40px
+                        margin-right: 10px
+
+                button
+                    border: none !important
+                    background: #ca252a !important
+                    color: white !important
+                    
+                    
+
+                
+
+                    
+            .mainSide
+                margin-top: 30px
+
+                .information
+                    margin-bottom: 30px
+            
+                .should
+                    flex-direction: column
+                    gap: 30px
+                    margin-top: 20px
+
+                    .block
+                        height: auto
+    
