--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -40,6 +40,19 @@
         .bottom
             font-weight: 400
 
+            .partnerBtn
+                border: none
+                background: white
+
+                color: black
+                font-family: "Inter", system-ui
+                cursor: pointer
+                width: 130px
+                height: 25px
+
+                font-weight: bolder
+
+
     
     .right
         align-items: flex-end
