--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -232,6 +232,29 @@
                         color: #fff
                         width: 144px
 
+                .name
+                    display: flex
+                    flex-direction: column
+
+                    justify-content: flex-start
+                    align-items: flex-start
+
+                    width: 100%
+                    margin-top: 20px
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.2)
+                    padding: 0 0 20px 0 
+
+
+                    h5, p
+                        color: white
+
+                    h5
+                        font-family: 'Steelfish'
+                        font-size: 35px
+                        padding-bottom: 10px
+
+
+
 
                 .links
                     padding: 24px 0
