--- a/src/pages/ApplicationPage/ApplicationPage.module.sass
+++ b/src/pages/ApplicationPage/ApplicationPage.module.sass
@@ -509,6 +509,14 @@
 
     .additionalFields
         width: 100%
+        .title
+            font-size: 50px
+            color: black
+            width: 100%
+
+            border-bottom: 1.50px solid rgba(2, 2, 4, 0.1)
+            padding-bottom: 30px
+
         .block
             display: flex
             align-items: center
