--- a/src/pages/ContactPage/ContactPage.module.sass
+++ b/src/pages/ContactPage/ContactPage.module.sass
@@ -95,3 +95,23 @@
         place-items: center
         background: #F0EFEC
         padding: 0
+
+@media screen and ( max-width:  1000px)
+    .container
+        align-items: center
+        justify-content: center
+        .crumbs
+            display: none
+        .about
+            margin: 0
+            width: 90%
+
+        .contacts
+
+            flex-direction: column
+            margin-left: 0
+
+        .img
+            width: 100%
+            margin: 20px 0 0 0
+            
