--- a/src/pages/PaymentPage/PaymentPage.module.sass
+++ b/src/pages/PaymentPage/PaymentPage.module.sass
@@ -96,3 +96,23 @@
 
         width: 100%
         background-color: #F0EFEC
+
+
+@media screen and ( max-width:  1000px)
+    .container
+        .innerContainer
+            width: 90%
+
+        .packets
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            margin-top: 20px
+
+            .packet
+                height: 200px
+                padding-top: 25px
+                border-top: 1px solid #11111132
+
+                &:first-child
+                    border: none
