--- a/src/pages/HomePage/HomePage.module.sass
+++ b/src/pages/HomePage/HomePage.module.sass
@@ -368,7 +368,7 @@
             
             
             .title, .redTitle
-                font-size: 66px
+                font-size: 223px
                 width: 300px
                 line-height: 100%
 
@@ -385,7 +385,7 @@
                 display: none
 
             .mobileLines
-                margin-top: 20px
+                margin-top: -70px
                 display: block
                 
                 
@@ -401,7 +401,8 @@
 
             .buttons    
                 flex-direction: column
-                margin-top: 32px
+                margin-top: -25px
+                height: 253px
                 
                 
 
@@ -409,7 +410,8 @@
                     width: 320px
 
                 .left
-                    color: black
+                    // color: black
+                    color: white
                     
                     
                 .right
