--- a/src/components/Questions/Questions.module.sass
+++ b/src/components/Questions/Questions.module.sass
@@ -78,15 +78,19 @@
 @media screen and ( max-width:  1000px)
     .container
         height: 1832px
+        
         .innerContainer
+            gap: 30px
             .title
                 font-size: 60px
                 width: 100%
                 text-align: left
+                margin-top: 40px
                 
 
             .questions
                 // margin-bottom: 150px
+
                 .questionBlock
                     .question
                         height: auto
