--- a/src/pages/CabinetPage/CabinetPage.module.sass
+++ b/src/pages/CabinetPage/CabinetPage.module.sass
@@ -396,9 +396,21 @@
                     align-items: flex-start
                     gap: 10px
 
-                    input, textarea
+                    input, textarea, select
                         width: 320px
+
+            .applications
+                flex-direction: column
+                .application
+                    width: 90%
+            
+            .exitBtn
+                margin-top: 0px
+
+            .boldText
+                margin-top: 50px
 
         .jouryBtn
             width: 320px
             font-size: 15px
+
