--- a/src/pages/HomePage/HomePage.module.sass
+++ b/src/pages/HomePage/HomePage.module.sass
@@ -369,10 +369,12 @@
             
             .title, .redTitle
                 font-size: 223px
-                width: 300px
+                // width: 300px
                 line-height: 100%
 
                 margin-top: 43px
+                margin-left: 0
+                left: 0
 
             .joury
                 // width: 90vw
