--- a/src/pages/Nominations/Nominations.module.sass
+++ b/src/pages/Nominations/Nominations.module.sass
@@ -459,7 +459,7 @@
             border-radius: 10px
             padding: 10px
             padding-bottom: 50px
-            left: 0
+            // left: 0
             .topSide
                 display: none
 
