--- a/src/pages/PaymentPage/PaymentPage.module.sass
+++ b/src/pages/PaymentPage/PaymentPage.module.sass
@@ -108,11 +108,17 @@
             justify-content: center
             align-items: center
             margin-top: 20px
+            width: 100%
+            
 
             .packet
+                width: 100%
                 height: 200px
                 padding-top: 25px
                 border-top: 1px solid #11111132
+                justify-content: center
+                align-items: center
+                padding-bottom: 20px
 
                 &:first-child
                     border: none
