--- a/src/pages/ApplicationPage/ApplicationPage.module.sass
+++ b/src/pages/ApplicationPage/ApplicationPage.module.sass
@@ -517,6 +517,20 @@
             border-bottom: 1.50px solid rgba(2, 2, 4, 0.1)
             padding-bottom: 30px
 
+            display: flex
+            flex-direction: row
+
+            justify-content: space-between
+            align-items: center
+
+            .delete
+                font-family: "Inter", sans-serif
+                font-size: 15px
+                font-weight: 700
+
+                color: #9f2525
+                cursor: pointer
+
         .block
             display: flex
             align-items: center
