--- a/src/components/Applications/Applications.module.sass
+++ b/src/components/Applications/Applications.module.sass
@@ -29,7 +29,7 @@
 
             .container
                 width: 40%
-                height: 300px
+                height: 200px
 
                 border: 1px solid #1111112f
                 border-radius: 5px
@@ -41,3 +41,18 @@
                 align-items: center
 
                 padding-top: 20px
+
+                p
+                    font-size: 20px
+
+                button
+                    width: 150px
+                    height: 35px 
+                    background: black
+
+                    color: white
+                    font-weight: bolder
+                    border: none
+                    margin-top: 20px
+                    cursor: pointer
+
