--- a/src/pages/AboutPage/AboutPage.module.sass
+++ b/src/pages/AboutPage/AboutPage.module.sass
@@ -199,7 +199,7 @@
     .redBlock 
         padding: 150px 80px
         width: 1132px
-        height: 364px
+        height: 464px
         background: #ca252a
 
         .title
@@ -737,6 +737,7 @@
             align-items: center
 
             width: 100%
+            height: auto
             .title
                 font-size: 50px
 
