--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -51,7 +51,8 @@
                 height: 25px
 
                 font-weight: bolder
-
+            img
+                cursor: pointer
 
     
     .right
