--- a/src/pages/AboutPage/AboutPage.module.sass
+++ b/src/pages/AboutPage/AboutPage.module.sass
@@ -727,6 +727,21 @@
 
                 img
                     margin: 10px
+
+            .date1
+                margin-top: 30px
+
+                .title
+                    margin-top: 30px
+                    font-size: 70px
+
+                .par
+                    margin-top: 40px
+                    text-align: center
+                    width: 95%
+                    
+                    font-size: 18px
+
         .redBlock
             padding: 0
 
