--- a/src/components/Applications/Applications.module.sass
+++ b/src/components/Applications/Applications.module.sass
@@ -56,3 +56,31 @@
                     margin-top: 20px
                     cursor: pointer
 
+
+
+    .nominations
+        display: flex
+        flex-direction: column
+
+        justify-content: center
+        align-items: center
+        width: 100%
+        margin-top: 50px   
+
+
+        .nomination
+            display: flex
+            flex-direction: row
+
+            justify-content: space-between
+            align-items: center
+
+            height: 50px    
+            border-bottom: 1px solid #11111126
+            width: 50%
+
+            p
+                font-size: 18px
+
+            img
+                width: 20px
