--- a/src/pages/AdminApplication/AdminApplication.module.sass
+++ b/src/pages/AdminApplication/AdminApplication.module.sass
@@ -55,6 +55,21 @@
             justify-content: flex-start
             align-items: flex-start
 
+        .textInput
+            border: 1px solid #1111111d
+            border-radius: 5px
+            width: 300px
+            height: 300px
+            padding: 10px
+            margin-top: 20px
+
+            &:focus
+                
+                outline: none
+            p
+                margin: 0 
+                height: auto
+
         .row
 
             display: flex
@@ -69,9 +84,23 @@
             input
                 width: 30px
                 margin: 0
-            
+
             p
                 margin: 0
+            
+
+
+            button
+                width: 150px
+                height: 30px
+                font-weight: bolder
+                border: none
+                border-radius: 4px
+                color: white
+
+                background: #640606
+
+
 
         .title
             font-family: steelfish
@@ -105,6 +134,7 @@
 
             margin-top: 50px
             cursor: pointer
+            margin-bottom: 30px
 
         .deleteBtn
             background: none
