--- a/src/pages/Nominations/Nominations.module.sass
+++ b/src/pages/Nominations/Nominations.module.sass
@@ -239,6 +239,56 @@
 
             width: 100%
 
+            .peoples
+                
+                background: white
+                display: flex
+                flex-direction: row
+
+                justify-content: flex-start
+                align-items: flex-start
+
+                flex-wrap: nowrap
+
+                gap: 5px
+
+                
+                transition: .5s
+                width: 100%
+                overflow-x: scroll
+                margin-top: 10px
+                padding-bottom: 20px
+
+                .block
+                    display: flex
+                    flex-direction: column
+
+                    justify-content: flex-start
+                    align-items: flex-start
+
+                    width: 233px
+                    height: 456px
+                    cursor: pointer
+                    border: none
+                    margin: 0
+                    padding: 0
+
+                    img
+                        width: 233px
+                        height: 350px
+
+                        object-fit: cover
+
+                    h4
+                        font-family: 'Steelfish'
+                        font-weight: 800
+                        font-size: 35px
+                        margin: 16px 0 0 0
+                        text-transform: uppercase
+
+                    p
+                        margin: 16px 0 0 0
+
             .title
                 text-transform: uppercase
                 color: #ca252a
