--- a/src/pages/AdminApplication/AdminApplication.module.sass
+++ b/src/pages/AdminApplication/AdminApplication.module.sass
@@ -30,6 +30,13 @@
         width: 1252px
         margin-top: 50px
         
+        textarea
+            border: 1px solid #1111111d
+            border-radius: 5px
+            width: 300px
+            height: 300px
+            padding: 10px
+            margin-top: 20px
 
         p    
             font-family: "Inter", system-ui
