--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -23,6 +23,22 @@
 
     z-index: 100
 
+    .viewBtn
+        width: 80%
+        height: 35px
+
+        background: white
+
+        color: black
+        // font-family: "Montserrat", sans-serif
+
+        cursor: pointer
+        border: none
+
+        font-weight: 1000
+        margin-top: 20px
+        
+
 
     .name
         display: flex
@@ -170,6 +186,22 @@
 
         width: 100vw
         height: 100%
+
+        .viewBtn
+            width: 100%
+            height: 35px
+
+            background: white
+
+            color: black
+            // font-family: "Montserrat", sans-serif
+
+            cursor: pointer
+            border: none
+
+            font-weight: 1000
+            margin-top: 20px
+            
 
         // background: #f0efec
 
