--- a/src/components/Applications/Applications.module.sass
+++ b/src/components/Applications/Applications.module.sass
@@ -6,6 +6,46 @@
     align-items: center
     width: 100%
 
+    .container 
+        width: 700px
+        height: 500px
+        overflow-y: scroll
+
+        border: 1px solid #1111112f
+        border-radius: 5px
+
+        display: flex
+        flex-direction: column
+
+        justify-content: flex-start
+        align-items: center
+
+        padding-top: 20px
+        position: fixed
+
+        z-index: 20
+        background: white
+
+        left: 50%
+        top: 50%
+        transform: translate(-50%, -50%)
+    
+        
+        p
+            font-size: 20px
+
+        button
+            width: 150px
+            height: 35px 
+            background: black
+
+            color: white
+            font-weight: bolder
+            border: none
+            margin-top: 20px
+            cursor: pointer
+
+
     .applications
         display: flex
         flex-direction: column
@@ -27,34 +67,6 @@
             gap: 30px
             width: 100%
 
-            .container
-                width: 40%
-                height: 200px
-
-                border: 1px solid #1111112f
-                border-radius: 5px
-
-                display: flex
-                flex-direction: column
-
-                justify-content: flex-start
-                align-items: center
-
-                padding-top: 20px
-
-                p
-                    font-size: 20px
-
-                button
-                    width: 150px
-                    height: 35px 
-                    background: black
-
-                    color: white
-                    font-weight: bolder
-                    border: none
-                    margin-top: 20px
-                    cursor: pointer
 
 
 
