--- a/src/pages/AboutPage/AboutPage.module.sass
+++ b/src/pages/AboutPage/AboutPage.module.sass
@@ -602,13 +602,13 @@
             display: flex
             flex-direction: row
 
-            justify-content: center
+            justify-content: space-around
             align-items: flex-start
 
 
             width: 1052px
             flex-wrap: wrap
-            gap: 40px
+            gap: 70px
 
 
             .person
@@ -628,12 +628,14 @@
                     text-transform: uppercase
                     text-align: center
                     color: #020204
+                    white-space: nowrap
 
                 p
                     text-align: center
                     font-family: "Inter", system-ui
                     font-weight: 400
                     width: 210px
+                    font-size: 15px
 
 
     .partners
