--- a/src/pages/Nominations/Nominations.module.sass
+++ b/src/pages/Nominations/Nominations.module.sass
@@ -95,6 +95,9 @@
                 color: rgba(2, 2, 4, 0.3)
                 cursor: pointer
 
+            .active
+                color: black
+
         .blocks
             display: flex
             flex-direction: row
