--- a/src/pages/CriteryPage/CriteryPage.module.sass
+++ b/src/pages/CriteryPage/CriteryPage.module.sass
@@ -60,6 +60,9 @@
                 color: rgba(2, 2, 4, 0.3)
                 cursor: pointer
 
+            .active
+                color: black
+
         .blocks
             display: flex
             flex-direction: row
@@ -340,6 +343,20 @@
                 width: 95%
                 justify-content: flex-start
                 align-items: flex-start
+
+                h5
+                    font-family: "Steelfish", sans-serif
+                    padding-bottom: 20px
+                    font-weight: 700
+                    font-size: 32px
+                    text-transform: uppercase
+                    white-space: nowrap
+                    color: rgba(2, 2, 4, 0.3)
+                    cursor: pointer
+
+                .active
+                    color: black
+
 
             .blocks
                 flex-direction: column
